Added functionality to login screen

--- a/IITB_Services/templates/authentication/base.html
+++ b/IITB_Services/templates/authentication/base.html
@@ -29,5 +29,8 @@
                 <button type="submit"><a href="/signout"> Sign Out</a></button>
             </ul>
         </nav>
+
+        <input type="checkbox" name="password" id="password">
+        <label for="password">hello</label>
     </body>
 </html>
