--- a/IITB_Services/static/css/style1.css
+++ b/IITB_Services/static/css/style1.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap');
 
 body{
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     
     color: white;
-
+    overflow: hidden;
+    
 }
 #left{
     flex: 1;
@@ -14,7 +16,7 @@ body{
     text-align: center;
     /* background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,77,77,1) 35%, rgba(0,212,255,1) 100%); */
-    background-color:black;
+    background-color:#000;
 background-image:
 radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
 radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
@@ -34,10 +36,11 @@ background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
 #left img{
     height: 150px;
     width: 150px;
-    margin-top: 4rem;
+    margin-top: 1.5rem;
     padding: 10px;
     border: solid 3px white;
     border-radius: 10%;
+    
 
 }
 form{
@@ -45,7 +48,7 @@ form{
     flex-direction: column;
     flex: 1;
     width: 70%;
-    margin-top: 1rem;
+    
 }
 form div{
 
@@ -57,9 +60,29 @@ form div{
 
 #right{
     flex: 1;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #000;
    
 }
+#right .right-header{
+    flex: 1;
+}
+#right #carouselExampleIndicators{
+    flex: 9;
+}
+
+.carousel-inner{
+    height: 100%;
+}
+.carousel-item{
+    height: 100%;
+}
+.carousel-item img{
+    height: 100%;
+}
+
 
 #wrapper{
     display: flex;
@@ -72,7 +95,7 @@ form div{
 div h1{
     animation: zoomup 1s ease infinite;
     animation-delay: calc(300ms);
-    padding-top: 4rem;
+    padding-top: 1rem;
 }
 @keyframes zoomup {
     10% {
@@ -121,10 +144,11 @@ span{
     padding: 0.7rem;
     height: 2.7rem;
     margin-top: 1rem;
-    background-color: rgb(0, 82, 88);
+    background-color: rgb(9, 119, 101);
     color: white;
     text-align: center;
     border: white 3px solid;
+    font-weight: 400;
 }
 
 
@@ -132,12 +156,54 @@ span{
     width: 70%;
     
 }
+#main-footer
+{
+    color: #fff;
+    margin: 1rem 0px;
+}
 
+h2{
+    font-family: 'Teko', sans-serif;
+    font-weight: 700;
+}
 
+.or{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0px;
+}
+
+.or .bar{
+    height: 3px;
+    width: 70px;
+    color: #fff;
+}
+.or span{
+    margin: 0px 1rem;
+}
+
+.new-user{
+    color: #fff;
+    margin-top: 20px;
+    font-size: 20px;
+}
+.right-header{
+    text-align: center;
+    size: 40px;
+    text-decoration: solid;
+    font-family: 'Teko', sans-serif;
+    font-weight: 500;
+    font-size: 40px;
+    color: white;
+    margin-top: 10px;
+    
+}
 
 @media (min-width:1200px){
     #left{
-        flex: 4;
+        flex: 5;
     }
     #right{
         flex: 6;
