--- a/IITB_Services/templates/authentication/signin.html
+++ b/IITB_Services/templates/authentication/signin.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style1.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">    <title>Document</title>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
-
+ 
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="{% static '/javascript/script.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -31,7 +34,7 @@
                     <img src="{% static 'images/IIT_Bombay_color_logo.png' %}" alt="IITB LOGO" >
                 </div>
                 <h1>Welcome to IITB Services by ADV</h1>
-                <form action="/signin" method="POST">
+                <form action="" method="POST">
                     {%csrf_token%}
                     <div>
                         <label>Email or Username</label>
@@ -39,23 +42,60 @@
                     </div>
                     <div>
                         <label>Password</label>
-                        <input type="text" class="text-input" name="password" placeholder="Enter password">
+                        <input type="password"  id="password" class="text-input" name="password" placeholder="Enter password">
                     </div>
+                    <div style="display: flex; flex-direction:row;  align-items:center;">
+                    <input type="checkbox" name='show' onclick="myFunction()">
+                    <label for="show">Show Password</label>
+                    </div>
+                    
+                    
+                    
+                    
                     <button type="submit" class="primary-btn">Sign In</button>
                 </form>
             </div>
-            <div class="or">
-                <hr class ='bar'>
-                <span>OR</span>
-                <hr class='bar'>
+            
+            <div class="new-user">
+                New to IITB Services?<a href="/signup">Sign Up</a>
             </div>
-            <a href="/signup" class='btn btn-success'>Sign Up</a>
+            <!-- <a href="/signup" class='btn btn-success'>Sign Up</a> -->
             <footer id='main-footer'>
-                <p>Copyright &copy; 2021, Dishank,Ashish,Vivek All Rights Reserved</p>
+                Copyright &copy; 2021, Dishank,Ashish,Vivek All Rights Reserved
             </footer>
         </div>
         <div id="right">
-            
+            <div class="right-header">
+                Glimpses of some of the services</h1>
+                
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="{% static 'images/Gulu1.jpg' %}" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="{% static 'images/Gulu3.jpg' %}" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="{% static 'images/Gulu4.JPG' %}" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              
         </div>
     </div>
 </body>
