--- a/IITB_Services/static/css/style1.css
+++ b/IITB_Services/static/css/style1.css
@@ -6,7 +6,7 @@ body{
     font-weight: 300;
     
     color: white;
-    overflow: hidden;
+    
     
 }
 #left{
@@ -55,6 +55,7 @@ form div{
     display: flex;
     flex-direction: column;
     padding: 10px;
+    justify-content: center;
     
 }
 
@@ -127,6 +128,7 @@ input{
     height: 40px;
     border: rgb(3, 90, 112) 3px solid;
     background-color: rgb(215, 239, 242);
+    margin-top: 10px;
 }
 #signin label{
     color: white;
@@ -143,12 +145,17 @@ span{
     display: block;
     padding: 0.7rem;
     height: 2.7rem;
-    margin-top: 1rem;
+    
     background-color: rgb(9, 119, 101);
     color: white;
     text-align: center;
     border: white 3px solid;
     font-weight: 400;
+    margin-top: 7px;
+}
+
+.primary-btn:hover{
+    background-color: rgb(1, 36, 24);
 }
 
 
@@ -207,5 +214,10 @@ h2{
     }
     #right{
         flex: 6;
+    }
+}
+@media (max-width:900px){
+    #wrapper{
+        flex-direction: column;
     }
 }
