--- a/IITB_Services/templates/authentication/index.html
+++ b/IITB_Services/templates/authentication/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% extends "authentication/base.html" %}
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,6 +18,7 @@
         </div>
         {% endfor %}
         
+        
         <h1>Welcome to IITB services by ADV </h1>
 
         {% if user.is_authenticated %}
@@ -30,4 +32,4 @@
         {% endif %}
         
 </body>
-</html>
+</html> -->
