--- a/IITB_Services/templates/authentication/signup.html
+++ b/IITB_Services/templates/authentication/signup.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -11,32 +12,87 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style1.css' %}">
+ 
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="{% static '/javascript/script.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
     </head>
     <body>
-
-        <h1>This is a signup page</h1>
-        <form action="/signup" method="POST">
-            {%csrf_token%}
-            <label for="">Username</label>
-            <input type="text" id='username' name="username" placeholder="Create a username (only letters and numbers)" required>
-            <br>
-            <label for="">First Name</label>
-            <input type="text" id='fname' name="fname" placeholder="Enter your first name" required>
-            <br>
-            <label for="">Last Name</label>
-            <input type="text" id='lname' name="lname" placeholder="Enter your last name" required>
-            <br>
-            <label for="">email</label>
-            <input type="email" id='email' name="email" placeholder="Enter your email" required>
-            <br>
-            <label for="">Password</label>
-            <input type="password" id='password' name="password" placeholder="Enter password" required>
-            <br>
-            <label for="">Confirm Password</label>
-            <input type="password" id='cpassword' name="cpassword" placeholder="Confirm your password" required>
-            <br>
-            <button type="submit">Sign Up</button>
-        </form>
+        <div id="wrapper">
+            <div id="left">
+                <div id="signin">
+                    <div id="logo">
+                        <img src="{% static 'images/IIT_Bombay_color_logo.png' %}" alt="IITB LOGO" >
+                    </div>
+                    <h1>Welcome to IITB Services by ADV</h1>
+                    <form action="/signup" method="POST">
+                        {%csrf_token%}
+                        
+                        <input style="margin-top: 5px;" type="text" id='username' name="username" placeholder="Create a username (only letters and numbers)" required>
+                        
+                        <input style="margin-top: 5px;" type="text" id='fname' name="fname" placeholder="Enter your first name" required>
+                        
+                        <input style="margin-top: 5px;" type="text" id='lname' name="lname" placeholder="Enter your last name" required>
+                        
+                        <input style="margin-top: 5px;" type="email" id='email' name="email" placeholder="Enter your email" required>
+                        
+                        <input style="margin-top: 5px;" type="password" id='password' name="password" placeholder="Enter password" required>
+                        
+                        <input style="margin-top: 5px;" type="password" id='cpassword' name="cpassword" placeholder="Confirm your password" required>
+                        
+                        <button class="primary-btn" type="submit">Sign Up</button>
+                    </form>
+                </div>
+                
+                <div class="new-user">
+                    Already have an account?<a href="\">Sign In</a>
+                </div>
+                <!-- <a href="/signup" class='btn btn-success'>Sign Up</a> -->
+                <footer id='main-footer'>
+                    Copyright &copy; 2021, Dishank,Ashish,Vivek All Rights Reserved
+                </footer>
+            </div>
+            <div id="right">
+                <div class="right-header">
+                    Glimpses of some of the services</h1>
+                    
+                </div>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="{% static 'images/Gulu1.jpg' %}" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="{% static 'images/Gulu3.jpg' %}" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="{% static 'images/Gulu4.JPG' %}" alt="Third slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                  
+            </div>
+        </div>
+        
+        
 
 
     </body>
