Corrected the view for the login screen

--- a/IITB_Services/templates/authentication/base.html
+++ b/IITB_Services/templates/authentication/base.html
@@ -29,6 +29,10 @@
                 <button type="submit"><a href="/signout"> Sign Out</a></button>
             </ul>
         </nav>
-
+        
+        {% block content %}
+            
+        {% endblock content %}
+            
     </body>
 </html>
