--- a/IITB_Services/templates/authentication/index.html
+++ b/IITB_Services/templates/authentication/index.html
@@ -1,4 +1,11 @@
 {% extends "authentication/base.html" %}
+
+
+{% block content %}
+    
+    <h1>hello Guys how are you?</h1>
+{% endblock %}
+    
 <!-- <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,3 +40,4 @@
         
 </body>
 </html> -->
+
