Implemented error messages

--- a/IITB_Services/templates/authentication/index.html
+++ b/IITB_Services/templates/authentication/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     
-    <h1>hello Guys how are you?</h1>
+    <h1>Hello {{ fname }} Welcome to IITB Services</h1>
 {% endblock %}
     
 <!-- <!DOCTYPE html>
