Integrated the gulmohar page

--- a/IITB_Services/templates/authentication/index.html
+++ b/IITB_Services/templates/authentication/index.html
@@ -7,9 +7,6 @@
     
     <h3 style="color: red; text-align:center; margin-top:100px;">Hello {{fname}} {{lname}} Welcome to IITB Services</h3>
     
-    {% for o in gul %}
-    {{o.item_name}} {{o.price}} <br>
-    {% endfor %}
 {% endblock %}
 
 
@@ -25,7 +22,7 @@
           <div class="body">
             <h5 class="text-secondary" style="text-align: center;">Gulmohar</h5>
             <p class="text-center">Select this to place order through Gulmohar</p>
-            <center><a href="h1.html" class="btn btn-primary" >Select</a></center>
+            <center><a href="/gulmohar" class="btn btn-primary" >Select</a></center>
           </div>
         </div>
       </div>
