--- a/IITB_Services/templates/authentication/base.html
+++ b/IITB_Services/templates/authentication/base.html
@@ -16,7 +16,7 @@
 
         <link rel="stylesheet" href="{%static 'css/bootstrap.css' %}">
         <link rel="stylesheet" href="{%static 'css/grocery_h10.css' %}">
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
         <link rel="stylesheet" href="{%static 'css/theme.css' %}">
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
