updated the gymkhana and the aroma website links

--- a/IITB_Services/templates/authentication/base.html
+++ b/IITB_Services/templates/authentication/base.html
@@ -66,6 +66,11 @@
         {% block conten %}
             
         {% endblock conten %}
+
+
+          {% block footer %}
+          
+          {% endblock footer %}
     
     </body>
 </html>
