--- a/IITB_Services/templates/authentication/index.html
+++ b/IITB_Services/templates/authentication/index.html
@@ -54,10 +54,54 @@
                 </div>
             </div>
         </div>
+        <div class="col-lg-4 " style="padding: 5px;">
+            <div class="card-service wow fadeInUp rounded border border-info" style="padding: 5px; ">
+                <div class="header">
+                    <center><img src="{% static 'images/aroma.jpeg' %}" alt="" class="rounded-circle" height="200px" width="200px"></center>
+                </div>
+                <div class="body">
+                    <h5 class="text-secondary" style="text-align: center;">Aroma IITB</h5>
+                    <p class="text-center">Select this to order food</p>
+                    <center><a href="https://mydukaan.io/aroma104" class="btn btn-primary">Select</a></center>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 " style="padding: 5px;">
+            <div class="card-service wow fadeInUp rounded border border-info" style="padding: 5px; ">
+                <div class="header">
+                    <center><img src="{% static 'images/iitb_gym.jpeg' %}" alt="" class="rounded-circle" height="200px" width="200px"></center>
+                </div>
+                <div class="body">
+                    <h5 class="text-secondary" style="text-align: center;">IITB gym</h5>
+                    <p class="text-center">Select this to book slot for IITB gymkhana</p>
+                    <center><a href="https://gymkhana.iitb.ac.in/~sports/index.php?r=site/gymbooking" class="btn btn-primary">Select</a></center>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <!-- .container -->
 {% endblock %}
+
+
+
+{% block footer %}
+<style>
+footer{
+    margin-top: 100px;
+    background-color:black;
+
+}
+
+h3{
+    color:white;
+    text-align:center;
+}
+</style>
+    <footer><h3>Developers : Dishank , Vivek , Ashish</h3></footer>
+
+    
+{% endblock footer %}
 
 
 <!-- <!DOCTYPE html>
