--- a/IITB_Services/templates/authentication/gulmohar.html
+++ b/IITB_Services/templates/authentication/gulmohar.html
@@ -1,8 +1,8 @@
 {% extends 'authentication/base.html' %}
-
+{% load static %}
 
 
 {% block content %}
-    <h1 style="margin-top: 100px;">welcome to gulmohar</h1>
+    
 {% endblock content %}
     
