--- a/IITB_Services/templates/authentication/gulmohar.html
+++ b/IITB_Services/templates/authentication/gulmohar.html
@@ -3,6 +3,28 @@
 
 
 {% block content %}
-    
+    <div class="cartItem">
+                <style>
+                .cartItem{
+                    margin-top: 100px
+                }
+                </style>
+                {% for item in gul  %}
+                <div class="cart-row">
+                    <div class="cart-item cart-column">
+                        <img class="cart-item-image" src={{item.image_src.url}} width="100" height="100">
+                        <span class="cart-item-title">{{item.item_name}}</span>
+                    </div>
+                    <span class="cart-price cart-column">₹{{item.price}}</span>
+                    <div class="cart-quantity cart-column">
+                        <input class="cart-quantity-input" type="number" value="0" name="item1">
+                        <button class="btn btn-danger" type="button"  onclick="deleteClick('item1')">REMOVE</button>
+                    </div>
+                </div>
+
+                
+                {% endfor %}
+                <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+            </div>
 {% endblock content %}
     
