added the padding to the gulmohar interface

--- a/IITB_Services/templates/authentication/gulmohar.html
+++ b/IITB_Services/templates/authentication/gulmohar.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <div class="cartItem">
+    <div class="cartItem" style="padding: 0px 50px">
                 <style>
                 .cartItem{
                     margin-top: 100px
