changed some css

--- a/IITB_Services/templates/authentication/gulmohar.html
+++ b/IITB_Services/templates/authentication/gulmohar.html
@@ -8,7 +8,13 @@
                 .cartItem{
                     margin-top: 100px
                 }
+                
                 </style>
+                <div class="cart-row">
+                <span class="cart-item cart-header cart-column">ITEM</span>
+                <span class="cart-price cart-header cart-column">UNIT PRICE</span>
+                <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+            </div>
                 {% for item in gul  %}
                 <div class="cart-row">
                     <div class="cart-item cart-column">
