--- a/IITB_Services/templates/authentication/gulmohar.html
+++ b/IITB_Services/templates/authentication/gulmohar.html
@@ -3,6 +3,9 @@
 
 
 {% block content %}
+<script src="https://smtpjs.com/v3/smtp.js">
+</script>
+
 <script src="{% static '/javascript/gulmohar.js' %}"></script>
         <style>
                 .band-name{
@@ -11,6 +14,7 @@
                 
                 </style>
                 
+        <h1 class="email">{{email}}</h1>
         <header class="main-header">
                 <h1 class="band-name band-name-large">GULMOHAR</h1></header>
         <section class="content-section container">
