--- a/IITB_Services/templates/authentication/gulmohar.html
+++ b/IITB_Services/templates/authentication/gulmohar.html
@@ -1,60 +1,61 @@
-{% extends 'authentication/base.html' %}
-{% load static %}
-
-
-{% block content %}
-<script src="https://smtpjs.com/v3/smtp.js">
-</script>
+{% extends 'authentication/base.html' %} {% load static %} {% block content %}
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 <script src="{% static '/javascript/gulmohar.js' %}"></script>
-        <style>
-                .band-name{
-                    margin-top: 100px
-                }
-                
-                </style>
-                
-        <h1 class="email">{{email}}</h1>
-        <header class="main-header">
-                <h1 class="band-name band-name-large">GULMOHAR</h1></header>
-        <section class="content-section container">
-                <h2 class="section-header">Menu</h2>
+<style>
+  .band-name {
+    margin-top: 100px;
+  }
+</style>
 
-            <div class="cart-row">
-                <span class="cart-item cart-header cart-column">ITEM</span>
-                <span class="cart-price cart-header cart-column">UNIT PRICE</span>
-                <span class="cart-quantity cart-header cart-column">QUANTITY</span>
-            </div>
-    
-            <div class="cartItem" style="padding: 0px 50px">
-                
-                {% for item in gul  %}
+<h1 class="email">{{email}}</h1>
+<header class="main-header">
+  <h1 class="band-name band-name-large">GULMOHAR</h1>
+</header>
+<section class="content-section container">
+  <h2 class="section-header">Menu</h2>
 
-                
-                {% if item.availability %}
-                <div class="cart-row">
-                    <div class="cart-item cart-column">
-                        <img class="cart-item-image" src={{item.image_src.url}} width="100" height="100">
-                        <span class="cart-item-title">{{item.item_name}}</span>
-                    </div>
-                    <span class="cart-price cart-column">₹{{item.price}}</span>
-                    <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="0" name="item1">
-                        <button class="btn btn-danger" type="button"  onclick="deleteClick('item1')">REMOVE</button>
-                    </div>
-                </div>
-                {% endif %}
-                    
-                
+  <div class="cart-row">
+    <span class="cart-item cart-header cart-column">ITEM</span>
+    <span class="cart-price cart-header cart-column">UNIT PRICE</span>
+    <span class="cart-quantity cart-header cart-column">QUANTITY</span>
+  </div>
 
-                
-                {% endfor %}
-                <div class="cart-total">
-                    <strong class="cart-total-title">Total</strong>
-                    <span class="cart-total-price">₹0</span>
-                </div>
-                <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
-            </div>
-        </section>
+  <div class="cartItem" style="padding: 0px 50px">
+    {% for item in gul %} {% if item.availability %}
+    <div class="cart-row">
+      <div class="cart-item cart-column">
+        <img
+          class="cart-item-image"
+          src="{{item.image_src.url}}"
+          width="100"
+          height="100"
+        />
+        <span class="cart-item-title">{{item.item_name}}</span>
+      </div>
+      <span class="cart-price cart-column">₹{{item.price}}</span>
+      <div class="cart-quantity cart-column">
+        <input
+          class="cart-quantity-input"
+          type="number"
+          value="0"
+          name="{{forloop.counter}}"
+        />
+        <button
+          class="btn btn-danger"
+          type="button"
+          onclick="deleteClick('{{forloop.counter}}')"
+        >
+          REMOVE
+        </button>
+      </div>
+    </div>
+    {% endif %} {% endfor %}
+    <div class="cart-total">
+      <strong class="cart-total-title">Total</strong>
+      <span class="cart-total-price">₹0</span>
+    </div>
+    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+  </div>
+</section>
 {% endblock content %}
-    
