Latest order first functionality and about page linked

--- a/IITB_Services/templates/authentication/base.html
+++ b/IITB_Services/templates/authentication/base.html
@@ -32,7 +32,7 @@
         
         <nav class="navbar navbar-light bg-light fixed-top" >
             <div class="container-fluid">
-              <a class="navbar-brand" href="#" >IITB Services by ADV</a>
+              <a class="navbar-brand" href="/welcome" >IITB Services by ADV</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-light navbar-toggler-icon"></span>
               </button>
@@ -46,14 +46,16 @@
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="/welcome">Home</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/signout">Signout</a>
-                      </li>
+                    
+                    
                     <li class="nav-item">
                       <a class="nav-link" href="/order">MY Orders</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/signout">Signout</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/about">About</a>
                     </li>
                   </ul>
                   
