--- a/IITB_Services/templates/authentication/myorder.html
+++ b/IITB_Services/templates/authentication/myorder.html
@@ -15,6 +15,7 @@
             <th scope="col">Order_ID</th>
             <th scope="col">Order_Details</th>
             <th scope="col">Vendor</th>
+            <th scope="col">Time</th>
             <th scope="col">Price</th>
             <th scope="col">Order_completed</th>
           </tr>
@@ -29,6 +30,7 @@
                 <th scope="row">{{item.order_id}}</th>
                 <td>{{item.order_details}}</td>
                 <td>{{item.Vendor}}</td>
+                <td>{{item.order_time}}</td>
                 <td>{{item.Price}}</td>
                 <td>{{item.Order_completed}}</td>
                
